syntax = "proto3";

package api.project;

option go_package = "project-service/api/project;project";
option java_multiple_files = true;
option java_package = "api.project";

service Project {
	rpc CreateProject (CreateProjectRequest) returns (CreateProjectReply);
	rpc UpdateProject (UpdateProjectRequest) returns (UpdateProjectReply);
	rpc DeleteProject (DeleteProjectRequest) returns (DeleteProjectReply);
	rpc GetProject (GetProjectRequest) returns (GetProjectReply);
	rpc ListProject (ListProjectRequest) returns (ListProjectReply);
}

message CreateProjectRequest {}
message CreateProjectReply {}

message UpdateProjectRequest {}
message UpdateProjectReply {}

message DeleteProjectRequest {}
message DeleteProjectReply {}

message GetProjectRequest {}
message GetProjectReply {}

message ListProjectRequest {}
message ListProjectReply {}